# transformer

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  TODO.txt  annotated.html  annotated_dup.js  bench.sh  bigram_8hpp.js  bigram_8hpp_source.html  bigramnn_8hpp.html  build.sh  build_debug.sh  build_release.sh  classoptim_1_1Adam-members.html  classoptim_1_1AdamW-members.html  classoptim_1_1AdamW.html  classoptim_1_1AdamW.js  classoptim_1_1OptimizerWithScheduler.html  classoptim_1_1SGD-members.html  classoptim_1_1_adam-members.html  classoptim_1_1_adam_w-members.html  classoptim_1_1_s_g_d-members.html  classoptim_1_1_s_g_d.html  classoptim_1_1_s_g_d.js  dir_d44c64559bbebec7f509842c48db8b23.js  docs_trigger.txt  doxygen_crawl.html  entitlements.plist  format.sh  functions.html  globals_enum.html  hierarchy.html  hierarchy.js  language__utils_8hpp.html  language__utils_8hpp.js  learning__rate_8hpp.html  (+88 more)
.githooks/: pre-commit
.github/workflows/: docs.yml  format.yml  tests.yml
apps/: main.cpp
docs/: bigram_8hpp.html  bigramnn_8hpp_source.html  classes.html  classoptim_1_1Adam-members.html  classoptim_1_1Adam.html  classoptim_1_1Adam.js  classoptim_1_1AdamW-members.html  classoptim_1_1AdamW.html  classoptim_1_1AdamW.js  classoptim_1_1Optimizer-members.html  classoptim_1_1Optimizer.html  classoptim_1_1Optimizer.js  classoptim_1_1OptimizerWithScheduler-members.html  classoptim_1_1OptimizerWithScheduler.js  classoptim_1_1SGD.html  classoptim_1_1SGD.js  classoptim_1_1_adam.html  classoptim_1_1_adam_w.html  classoptim_1_1_optimizer-members.html  classoptim_1_1_optimizer.html  classoptim_1_1_optimizer_with_scheduler.html  classoptim_1_1_optimizer_with_scheduler.js  data_2mnist_8hpp.html  data_2mnist_8hpp.js  data_2mnist_8hpp_source.html  dataloader_8hpp.html  dataloader_8hpp_source.html  dir_02f881e572026b341c0e59521be738e9.html  dir_bd52eb7ac821349adc834157bbaf2648.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  embednlp_8hpp.html  embednlp_8hpp.js  embednlp_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  (+118 more)
docs/html/: annotated.html  annotated_dup.js  bigram_8hpp.html  bigram_8hpp_source.html  bigramnn_8hpp.html  bigramnn_8hpp.js  bigramnn_8hpp_source.html  classes.html  classoptim_1_1_adam.js  classoptim_1_1_adam_w.js  classoptim_1_1_optimizer.js  classoptim_1_1_optimizer_with_scheduler-members.html  data_2mnist_8hpp.html  data_2mnist_8hpp.js  data_2mnist_8hpp_source.html  dataloader_8hpp.html  dataloader_8hpp_source.html  dir_02f881e572026b341c0e59521be738e9.html  dir_02f881e572026b341c0e59521be738e9.js  dir_bd52eb7ac821349adc834157bbaf2648.html  dir_bd52eb7ac821349adc834157bbaf2648.js  dir_d44c64559bbebec7f509842c48db8b23.html  embednlp_8hpp.html  embednlp_8hpp.js  embednlp_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  language__utils_8hpp.html  language__utils_8hpp.js  language__utils_8hpp_source.html  learning__rate_8hpp.html  (+61 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_5.js  enumvalues_7.js  (+33 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  enums_1.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_2.js  files_3.js  files_4.js  files_7.js  files_8.js  (+32 more)
include/: bigram.hpp  bigramnn.hpp  dataloader.hpp  embednlp.hpp  learning_rate.hpp  linalg.hpp  linear_regression.hpp  loss.hpp  matmul_cost_model.hpp  mempool.hpp  micrograd.hpp  mlp.hpp  mnist.hpp  neuron.hpp  nn.hpp  optimizer.hpp  probs.hpp  tensor.hpp  tokenizer.hpp  utils.hpp  vis.hpp
include/data/: mnist.hpp  sampler.hpp  split.hpp  swedish_auto.hpp  text.hpp
include/train/: language_utils.hpp
lib/core/: learning_rate.cpp  tensor.cpp
lib/data/: mnist.cpp  sampler.cpp  swedish_auto.cpp  text.cpp  tokenizer.cpp
lib/models/: bigram.cpp  bigramnn.cpp  embednlp.cpp  mnist.cpp  xormodel_tensors.cpp
lib/nn/: nn.cpp
lib/train/: language_utils.cpp
lib/utils/: probs.cpp  utils.cpp
microbenchmarks/: CMakeLists.txt
microbenchmarks/csv_loader/: CMakeLists.txt  bench_entry.cpp
microbenchmarks/elementwise/: CMakeLists.txt  bench_entry.cpp
microbenchmarks/matmul/: CMakeLists.txt  bench_entry.cpp  bench_runner.cpp  bench_runner.hpp  matmul_registry.cpp
microbenchmarks/mnist_csv/: CMakeLists.txt  bench_entry.cpp
scripts/: bench.sh  build_debug.sh  doc.sh  format.sh  run.sh  run_debug.sh  test.sh  trace.sh  trace_bench.sh  vis_loss_v2.py
search/: all_11.js  all_16.js  all_4.js  all_b.js  all_c.js  all_d.js  classes_6.js  classes_7.js  enumvalues_0.js  enumvalues_4.js  files_0.js  files_4.js  files_5.js  files_b.js  functions_a.js  functions_b.js  functions_c.js  functions_f.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_3.js  variables_1.js  variables_3.js  variables_a.js  variables_c.js  variables_e.js
src/: bigram.cpp  bigramnn.cpp  dataloader.cpp  embednlp.cpp  learning_rate.cpp  linear_regression.cpp  loss.cpp  main.cpp  micrograd.cpp  mlp.cpp  mnist.cpp  neuron.cpp  nlp.cpp  nn.cpp  optimizer.cpp  probs.cpp  tensor.cpp  tokenizer.cpp  utils.cpp  vis.cpp  xormodel.cpp  xormodel.hpp  xormodel_tensors.cpp  xormodel_tensors.hpp
tests/: CMakeLists.txt  tensor_ops_test.cpp  utils_test.cpp
